--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Finexo
+              <img src="images/logoakkari2.png" alt="Akkari Design">
             </span>
           </a>
 
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Acerca de</a>
+                <a class="nav-link" href="about.html">Acerca</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Servicios</a>
@@ -91,22 +91,17 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Crypto <br>
-                      Currency
+                      Saludos!! <br>
+                      Querido Cliente
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      Mi Nombre es Akkari!
                     </p>
-                    <div class="btn-box">
-                      <a href="" class="btn1">
-                        Read More
-                      </a>
-                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/akkarita.png" alt="Akkarita">
                   </div>
                 </div>
               </div>
@@ -118,22 +113,22 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Crypto <br>
-                      Currency
+                      XDDD <br>
+                      AYUDAAAAAA
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      Tengo hambre xD
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Read More
+                        JASDLKASJDXDDD
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/akkarita.png" alt="Akkarita">
                   </div>
                 </div>
               </div>
@@ -145,22 +140,22 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Crypto <br>
-                      Currency
+                      Nose que poner aca <br>
+                      
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      Olap
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Read More
+                        Leer Más...
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/akkarita.png" alt="Akkarita">
                   </div>
                 </div>
               </div>
