--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  
+  <!-- (c) Layout created by 🌈☆ ˚˖ (๑òᆺó๑) ˖ ˚ ☆🌸 (https://layouts.spacehey.com/layout?id=37558) -->
+
+<style>html:before {
+  animation: grain 8s steps(10) infinite;
+  background-image: url(https://i.pinimg.com/originals/17/6f/b5/176fb547189cbdb4f745d425e84167f3.gif);
+  content: "";
+  height: 300%;
+  left: -50%;
+  opacity:.4;
+  position: fixed;
+  top: -110%;
+  width: 300%;
+  pointer-events:none;
+}
+@keyframes grain 
+  70% { transform:translate(0%, 15%) }
+}</style>
 
 </head>
 
