--- a/index.html
+++ b/index.html
@@ -32,23 +32,61 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   
+  <!-- aca empiezaXDDDDDDDDDDDDDDDDDDDDDDDDDD -->
   <!-- (c) Layout created by 🌈☆ ˚˖ (๑òᆺó๑) ˖ ˚ ☆🌸 (https://layouts.spacehey.com/layout?id=37558) -->
 
-<style>html:before {
-  animation: grain 8s steps(10) infinite;
-  background-image: url(https://i.pinimg.com/originals/17/6f/b5/176fb547189cbdb4f745d425e84167f3.gif);
-  content: "";
-  height: 300%;
-  left: -50%;
-  opacity:.4;
-  position: fixed;
-  top: -110%;
-  width: 300%;
-  pointer-events:none;
+
+<div class="snowflakes">
+  <div class="snowflake">
+   <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+  </div>
+  <div class="snowflake">
+  <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  </div>
+  <div class="snowflake">
+  <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  </div>
+  <div class="snowflake">
+  <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+  </div>
+  <div class="snowflake">
+  <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  </div>
+  <div class="snowflake">
+  <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  </div>
+  <div class="snowflake">
+    <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  </div>
+  <div class="snowflake">
+    <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  </div>
+  <div class="snowflake">
+     <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  </div>
+  <div class="snowflake">
+    <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  </div>
+  <div class="snowflake">
+    <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  </div>
+  <div class="snowflake">
+    <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+  </div>
+</div>
+<style>
+/* customizable snowflake styling */
+.snowflake {
+  color: #27cff5;
+  font-size: 2em;
+  font-family: Arial, sans-serif;
+  text-shadow: 0 0 0px rgba(0,0,0,0.7);
 }
-@keyframes grain 
-  70% { transform:translate(0%, 15%) }
-}</style>
+
+@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
+</style>
+
+<!-- aca terminaXDDDDDDDDDDDDD -->
 
 </head>
 
