--- a/index.html
+++ b/index.html
@@ -38,40 +38,40 @@
 
 <div class="snowflakes">
   <div class="snowflake">
-   <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+   <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-  <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-  <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-  <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-  <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-  <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-    <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-    <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-     <img src="https://i.ibb.co/XZ3vS8y/ddrsmall2.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-    <img src="https://i.ibb.co/N3L7dVb/ddrsmall3.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-    <img src="https://i.ibb.co/51b9Pqt/ddrsmall4.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
   <div class="snowflake">
-    <img src="https://i.ibb.co/sg5nh3V/ddrsmall1.gif"/>
+  <img src="images/estrella.gif" width="10%">
   </div>
 </div>
 <style>
@@ -146,12 +146,11 @@
               <div class="row">
                 <div class="col-md-6 ">
                   <div class="detail-box">
-                    <h1>
-                      Saludos!! <br>
-                      Querido Cliente
-                    </h1>
+				<h1 align="center">
+					¡Saludos! OwO<br>Querido Cliente
+				</h1>
                     <p>
-                      Mi Nombre es Akkari!
+                      <marquee behavior="alternate" scrollamount="10">¡Mi Nombre es Akkari!</marquee>
                     </p>
                   </div>
                 </div>
@@ -168,12 +167,11 @@
               <div class="row">
                 <div class="col-md-6 ">
                   <div class="detail-box">
-                    <h1>
-                      XDDD <br>
-                      AYUDAAAAAA
-                    </h1>
+                    <h1 align="center">
+						AYUDAAAA<br>TENGO HAMBRE XDDD
+					</h1>
                     <p>
-                      Tengo hambre xD
+                      ¡Tengo Hambreeee!
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -195,12 +193,11 @@
               <div class="row">
                 <div class="col-md-6 ">
                   <div class="detail-box">
-                    <h1>
-                      Nose que poner aca <br>
-                      
-                    </h1>
+                    <h1 align="center">
+						REGALENME UNA PIZZA XDDSADASD<br>PORFAVOOOOR
+					</h1>
                     <p>
-                      Olap
+                      ¡Oliwisiiiiiisisisisisi!
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
