--- a/index.html
+++ b/index.html
@@ -88,9 +88,29 @@
 
 <!-- aca terminaXDDDDDDDDDDDDD -->
 
+
+
 </head>
 
 <body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reproductor de Música</title>
+</head>
+<body>
+
+<h1>Reproduciendo "I'll See You Again"</h1>
+
+<audio autoplay controls>
+    <source src="images/I'll See You Again.mp3" type="audio/mpeg">
+    Tu navegador no soporta el elemento de audio.
+</audio>
+
+</body>
+</html>
 
   <div class="hero_area">
 
@@ -225,7 +245,6 @@
     </section>
     <!-- end slider section -->
   </div>
-
 
 
 
