--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 </head>
 <body>
 <audio autoplay controls>
-    <source src="I'll See You Again.mp3" type="audio/mpeg">
+    <source src="images/I'll See You Again.mp3" type="audio/mpeg">
 </audio>
 
   <section class="footer_section">
