--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-Hola Mundo!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Akkari Design - Artes Gráficas, servicios de diseño gráfico, imprenta y más.">
+    <title>Akkari Design - Artes Gráficas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            margin-top: 10px;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Akkari Design - Artes Gráficas</h1>
+        <nav>
+            <a href="#catalogo">Catálogo</a>
+            <a href="#contacto">Contacto</a>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Bienvenidos a Akkari Design</h2>
+        <p>Ofrecemos servicios de diseño gráfico, impresión y mucho más. Explora nuestro catálogo para descubrir todas nuestras soluciones creativas.</p>
+        <a id="catalogo" href="catalogo.html">Ir al catálogo</a>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Akkari Design - Todos los derechos reservados</p>
+    </footer>
+</body>
+</html>
