--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             background-color: #333;
             color: white;
             padding: 10px 0;
-            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        header h1 {
-            margin: 0;
+        header img {
+            margin-left: 20px;
+            max-height: 60px;
         }
         nav {
-            margin-top: 10px;
+            margin-right: 20px;
         }
         nav a {
             margin: 0 15px;
@@ -47,10 +50,13 @@
 </head>
 <body>
     <header>
-        <h1>Akkari Design - Artes Gráficas</h1>
+        <!-- Logo en la parte izquierda -->
+        <img src="images/logo.png" alt="Logo Akkari Design">
+        
+        <!-- Navegación a la derecha -->
         <nav>
-            <a href="#catalogo">Catálogo</a>
-            <a href="#contacto">Contacto</a>
+            <a href="catalogo.html">Catálogo</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </header>
 
