--- a/catalogo.html
+++ b/catalogo.html
@@ -15,59 +15,78 @@
         header {
             background-color: #333;
             color: white;
-            padding: 10px 0;
+            padding: 10px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
         header img {
-            margin-left: 20px;
             max-height: 60px;
+            cursor: pointer; /* Cambia el cursor al pasar sobre el logo */
         }
+        /* Estilos del nuevo menú hamburguesa */
         nav {
-            margin-right: 20px;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-        .menu-icon {
-            display: none;
-            font-size: 30px;
-            cursor: pointer;
-            margin-right: 20px;
+            display: flex;
+            align-items: center;
         }
         .nav-links {
             display: flex;
+            gap: 20px;
         }
+        .nav-links a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .hamburger-menu {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
+        .hamburger-menu div {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 4px 0;
+        }
+        /* Estilos para menú desplegable en móviles */
+        .nav-links-mobile {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: 70px;
+            right: 0;
+            background-color: #333;
+            width: 100%;
+            text-align: center;
+        }
+        .nav-links-mobile a {
+            padding: 10px 0;
+            border-top: 1px solid #444;
+            color: white;
+        }
+        .nav-links-mobile.show {
+            display: flex;
+        }
+        /* Medios para hacer que el menú hamburguesa aparezca en móviles */
         @media (max-width: 768px) {
-            .menu-icon {
-                display: block;
-            }
             .nav-links {
                 display: none;
-                flex-direction: column;
-                background-color: #333;
-                position: absolute;
-                top: 70px;
-                right: 0;
-                width: 100%;
-                padding: 10px 0;
             }
-            .nav-links a {
-                padding: 10px;
-                border-top: 1px solid #444;
-                margin: 0;
-                text-align: center;
-            }
-            .nav-links.show {
+            .hamburger-menu {
                 display: flex;
             }
         }
         main {
             padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            margin-top: 20px;
         }
         .filter-buttons {
             text-align: center;
@@ -127,18 +146,11 @@
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 20px;
         }
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
-        }
     </style>
     <script>
         function toggleMenu() {
-            var navLinks = document.getElementById('navLinks');
-            navLinks.classList.toggle('show');
+            var navLinksMobile = document.getElementById('navLinksMobile');
+            navLinksMobile.classList.toggle('show');
         }
 
         function showProducts(type) {
@@ -158,19 +170,29 @@
 </head>
 <body>
     <header>
-        <!-- Logo en la parte izquierda -->
-        <img src="images/logo.png" alt="Logo Akkari Design">
+        <!-- Logo como hipervínculo a index.html -->
+        <a href="index.html"><img src="images/logo.png" alt="Logo Akkari Design"></a>
         
-        <!-- Icono del menú hamburguesa (solo visible en móviles) -->
-        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-        
-        <!-- Navegación -->
+        <!-- Menú de navegación normal -->
         <nav>
-            <div class="nav-links" id="navLinks">
+            <div class="nav-links">
                 <a href="catalogo.html">Catálogo</a>
                 <a href="contacto.html">Contacto</a>
             </div>
+
+            <!-- Menú hamburguesa para móviles -->
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
+
+        <!-- Menú desplegable para móviles -->
+        <div class="nav-links-mobile" id="navLinksMobile">
+            <a href="catalogo.html">Catálogo</a>
+            <a href="contacto.html">Contacto</a>
+        </div>
     </header>
 
     <main>
