--- a/catalogo.html
+++ b/catalogo.html
@@ -200,26 +200,26 @@
         <!-- Botones para filtrar por tipo de producto -->
         <div class="filter-buttons">
             <button onclick="showProducts('product')">Todos</button>
-            <button onclick="showProducts('Lonas')">Lonas</button>
+            <button onclick="showProducts('altoformato')">Impresion Alto Formato</button>
             <button onclick="showProducts('Playeras')">Playeras</button>
         </div>
 
         <div class="products-container">
             <!-- Producto 1 (Lona) -->
-            <div class="product Lonas">
-                <img src="ruta-de-la-imagen-del-producto1.jpg" alt="Producto 1">
-                <h3>Producto 1</h3>
-                <p class="description">Descripción detallada del Producto 1 (Lona).</p>
-                <p class="price">$500 MXN</p>
+            <div class="product altoformato">
+                <img src="images/productos/lona.jpg" alt="Lona Impresa">
+                <h3>Lona Impresa</h3>
+                <p class="description">Lona Impresa con Dobles y Ojillos.</p>
+                <p class="price">$85 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto1'">Ver más detalles</button>
             </div>
 
             <!-- Producto 2 (Lona) -->
-            <div class="product Lonas">
-                <img src="ruta-de-la-imagen-del-producto2.jpg" alt="Producto 2">
-                <h3>Producto 2</h3>
-                <p class="description">Descripción detallada del Producto 2 (Lona).</p>
-                <p class="price">$700 MXN</p>
+            <div class="product altoformato">
+                <img src="images/productos/vinil.jpg" alt="Vinil Impreso">
+                <h3>Vinil Impreso</h3>
+                <p class="description">Vinil Impreso en Alta Calidad.</p>
+                <p class="price">$190 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto2'">Ver más detalles</button>
             </div>
 
