--- a/Testing.html
+++ b/Testing.html
@@ -3,21 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página con Favicon</title>
-    <!-- Vincula tu favicon aquí -->
-    <link rel="icon" href="images/logo.png" type="image/png">
+    <title>Catálogo - Akkari Design</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            text-align: center; /* Centra el texto en la página */
-            background-color: #f4f4f4; /* Color de fondo */
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        /* Estilos del modal */
+        .modal {
+            display: none; /* Oculto por defecto */
+            position: fixed; /* Posicionado en relación a la ventana */
+            z-index: 1000; /* Asegura que esté sobre otros elementos */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Habilita el desplazamiento si es necesario */
+            background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con opacidad */
+        }
+        .modal-content {
+            background-color: #fff;
+            margin: 15% auto; /* 15% desde la parte superior y centrado */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Ancho del modal */
+            max-width: 800px; /* Ancho máximo del modal */
+        }
+        .close {
+            color: #aaa; /* Color del botón de cerrar */
+            float: right; /* Coloca a la derecha */
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black; /* Cambia color al pasar el mouse */
+            text-decoration: none;
+            cursor: pointer; /* Cambia el cursor al pasar */
+        }
+        /* Estilos del botón */
+        .view-details {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+        .view-details:hover {
+            background-color: #555; /* Color al pasar el mouse */
+        }
+        /* Estilos del iframe */
+        iframe {
+            width: 100%;
+            height: 400px; /* Altura del iframe */
+            border: none; /* Sin borde */
         }
     </style>
 </head>
 <body>
-    <h1>Bienvenido a Mi Página</h1>
-    <p>El logo aparece en la barra del navegador.</p>
+    <h1>Catálogo de Productos</h1>
+    <div>
+        <h2>Producto 1</h2>
+        <p>Descripción del producto 1.</p>
+        <button class="view-details" onclick="openModal()">Ver más detalles</button>
+    </div>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Detalles del Producto</h2>
+            <iframe src="index.html"></iframe>
+        </div>
+    </div>
+
+    <script>
+        // Funciones para abrir y cerrar el modal
+        function openModal() {
+            document.getElementById("myModal").style.display = "block";
+        }
+
+        function closeModal() {
+            document.getElementById("myModal").style.display = "none";
+        }
+
+        // Cierra el modal si se hace clic fuera de él
+        window.onclick = function(event) {
+            var modal = document.getElementById("myModal");
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
