--- a/catalogo.html
+++ b/catalogo.html
@@ -147,6 +147,57 @@
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 20px;
         }
+		/* Estilos del modal */
+        .modal {
+            display: none; /* Oculto por defecto */
+            position: fixed; /* Posicionado en relación a la ventana */
+            z-index: 1000; /* Asegura que esté sobre otros elementos */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Habilita el desplazamiento si es necesario */
+            background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con opacidad */
+        }
+        .modal-content {
+            background-color: #fff;
+            margin: 5% auto; /* 15% desde la parte superior y centrado */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Ancho del modal */
+            max-width: 800px; /* Ancho máximo del modal */
+        }
+        .close {
+            color: #aaa; /* Color del botón de cerrar */
+            float: right; /* Coloca a la derecha */
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black; /* Cambia color al pasar el mouse */
+            text-decoration: none;
+            cursor: pointer; /* Cambia el cursor al pasar */
+        }
+        /* Estilos del botón */
+        .view-details {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+        .view-details:hover {
+            background-color: #555; /* Color al pasar el mouse */
+        }
+        /* Estilos del iframe */
+        iframe {
+            width: 100%;
+            height: 800px; /* Altura del iframe */
+            border: none; /* Sin borde */
+        }
     </style>
     <script>
         function toggleMenu() {
@@ -167,6 +218,22 @@
         window.onload = function() {
             showProducts('product');
         };
+		        // Funciones para abrir y cerrar el modal
+        function openModal() {
+            document.getElementById("myModal").style.display = "block";
+        }
+
+        function closeModal() {
+            document.getElementById("myModal").style.display = "none";
+        }
+
+        // Cierra el modal si se hace clic fuera de él
+        window.onclick = function(event) {
+            var modal = document.getElementById("myModal");
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        }
     </script>
 </head>
 <body>
@@ -211,9 +278,17 @@
                 <h3>Lona Impresa</h3>
                 <p class="description">Lona Impresa con Dobles y Ojillos.</p>
                 <p class="price">$85 MXN</p>
-                <button onclick="window.location.href='https://ejemplo.com/producto1'">Ver más detalles</button>
-            </div>
+<button class="view-details" onclick="openModal()">Ver más detalles</button>
+    </div>
 
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <iframe src="index.html"></iframe>
+        </div>
+    </div>
+	
             <!-- Producto 2 (Lona) -->
             <div class="product altoformato">
                 <img src="images/productos/vinil.jpg" alt="Vinil Impreso">
@@ -237,5 +312,6 @@
     <footer>
         <p>&copy; 2024 Akkari Design - Todos los derechos reservados</p>
     </footer>
+	
 </body>
 </html>
