--- a/Testing.html
+++ b/Testing.html
@@ -1,104 +1,140 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" href="images/favicon.jpg" type="image/jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo - Akkari Design</title>
+    <meta name="description" content="Bienvenido a Akkari Design - Artes Gráficas, tu opción en impresión y diseño.">
+    <title>Akkari Design - Artes Gráficas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            text-align: center;
         }
-        /* Estilos del modal */
-        .modal {
-            display: none; /* Oculto por defecto */
-            position: fixed; /* Posicionado en relación a la ventana */
-            z-index: 1000; /* Asegura que esté sobre otros elementos */
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto; /* Habilita el desplazamiento si es necesario */
-            background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con opacidad */
-        }
-        .modal-content {
-            background-color: #fff;
-            margin: 15% auto; /* 15% desde la parte superior y centrado */
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%; /* Ancho del modal */
-            max-width: 800px; /* Ancho máximo del modal */
-        }
-        .close {
-            color: #aaa; /* Color del botón de cerrar */
-            float: right; /* Coloca a la derecha */
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover,
-        .close:focus {
-            color: black; /* Cambia color al pasar el mouse */
-            text-decoration: none;
-            cursor: pointer; /* Cambia el cursor al pasar */
-        }
-        /* Estilos del botón */
-        .view-details {
-            padding: 10px 20px;
+        header {
             background-color: #333;
             color: white;
-            border: none;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        header img {
+            max-height: 60px;
+        }
+        /* Estilos del nuevo menú hamburguesa */
+        nav {
+            display: flex;
+            align-items: center;
+        }
+        .nav-links {
+            display: flex;
+            gap: 20px;
+        }
+        .nav-links a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .hamburger-menu {
+            display: none;
+            flex-direction: column;
             cursor: pointer;
-            border-radius: 5px;
-            font-size: 1em;
         }
-        .view-details:hover {
-            background-color: #555; /* Color al pasar el mouse */
+        .hamburger-menu div {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 4px 0;
         }
-        /* Estilos del iframe */
-        iframe {
+        /* Estilos para menú desplegable en móviles */
+        .nav-links-mobile {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: 70px;
+            right: 0;
+            background-color: #333;
             width: 100%;
-            height: 400px; /* Altura del iframe */
-            border: none; /* Sin borde */
+            text-align: center;
         }
-    </style>
-</head>
-<body>
-    <h1>Catálogo de Productos</h1>
-    <div>
-        <h2>Producto 1</h2>
-        <p>Descripción del producto 1.</p>
-        <button class="view-details" onclick="openModal()">Ver más detalles</button>
-    </div>
-
-    <!-- Modal -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Detalles del Producto</h2>
-            <iframe src="index.html"></iframe>
-        </div>
-    </div>
-
-    <script>
-        // Funciones para abrir y cerrar el modal
-        function openModal() {
-            document.getElementById("myModal").style.display = "block";
+        .nav-links-mobile a {
+            padding: 10px 0;
+            border-top: 1px solid #444;
+            color: white;
         }
-
-        function closeModal() {
-            document.getElementById("myModal").style.display = "none";
+        .nav-links-mobile.show {
+            display: flex;
         }
-
-        // Cierra el modal si se hace clic fuera de él
-        window.onclick = function(event) {
-            var modal = document.getElementById("myModal");
-            if (event.target === modal) {
-                modal.style.display = "none";
+        /* Medios para hacer que el menú hamburguesa aparezca en móviles */
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+            .hamburger-menu {
+                display: flex;
             }
         }
+		        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+		main {
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+    </style>
+    <script>
+        function toggleMenu() {
+            var navLinksMobile = document.getElementById('navLinksMobile');
+            navLinksMobile.classList.toggle('show');
+        }
     </script>
+</head>
+<body>
+    <header>
+        <!-- Logo a la izquierda -->
+        <a href="index.html"><img src="images/logo.png" alt="Logo Akkari Design"></a>
+        
+        <!-- Menú de navegación normal -->
+        <nav>
+            <div class="nav-links">
+                <a href="catalogo.html">Catálogo</a>
+                <a href="contacto.html">Contacto</a>
+            </div>
+
+            <!-- Menú hamburguesa para móviles -->
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </nav>
+
+        <!-- Menú desplegable para móviles -->
+        <div class="nav-links-mobile" id="navLinksMobile">
+            <a href="catalogo.html">Catálogo</a>
+            <a href="contacto.html">Contacto</a>
+        </div>
+    </header>
+
+	<main>
+        <h2>Bienvenidos a Akkari Design</h2>
+        <p>Ofrecemos servicios de diseño gráfico, impresión y mucho más. Explora nuestro catálogo para descubrir todas nuestras soluciones creativas.</p>
+        <a id="catalogo" href="catalogo.html">Ir al catálogo</a>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Akkari Design - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
