--- a/catalogo.html
+++ b/catalogo.html
@@ -92,6 +92,10 @@
         .filter-buttons {
             text-align: center;
             margin-bottom: 20px;
+			display: block; /* Asegura que cada botón ocupe su propia línea */
+			margin: 10px 0; /* Espacio arriba y abajo de cada botón */
+			padding: 10px; /* Opcional: añade espacio interno para un mejor aspecto */
+			width: 100%; /* Asegúrate de que el botón ocupe el ancho completo */			
         }
         .filter-buttons button {
             background-color: #333;
@@ -101,6 +105,8 @@
             border-radius: 5px;
             margin: 0 10px;
             cursor: pointer;
+			margin: 10px 0; /* Espacio arriba y abajo de cada botón */
+			padding: 10px; /* Opcional: añade espacio interno para un mejor aspecto */
         }
         .filter-buttons button:hover {
             background-color: #555;
